--- a/2_bookshelf/index.html
+++ b/2_bookshelf/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookshelf</title>
+    <title>Bookshelf Exercise</title>
 </head>
 <body>
     <script src="script.js"></script>
